js/js.translator/testData/incremental/invalidation/associatedObjectKey/lib1/Annotation2.0.kt
@file:OptIn(ExperimentalAssociatedObjects::class)

import kotlin.reflect.*

@AssociatedObjectKey
annotation class Annotation2(val kClass: KClass<out Any>)
